--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "apisauce": "^1.1.1",
     "firebase": "^7.2.2",
     "react": "^16.11.0",
+    "react-beautiful-dnd": "^12.0.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
